--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>9.4.54.v20150529</version>
+                <version>9.2.11.v20150529</version>
                 <configuration>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <webApp>
@@ -182,7 +182,7 @@
  		    <plugin>
  		        <groupId>org.jacoco</groupId>
  		        <artifactId>jacoco-maven-plugin</artifactId>
- 		        <version>0.8.11</version>
+ 		        <version>0.7.2.201409121644</version>
  		        <executions>
  		            <execution>
  		                <id>jacoco-initialize</id>
